# cw_drf

./: .env.example  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_reminderhistory.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
